Changelog for Miosix np embedded OS

- Updated newlib patches so as to avoid stdio code fragmenting large
  data blocks passed to fwrite() into smaller chunks if the file is
  unbuffered. This allows to increment filesystem write performance,
  especially FAT32 on SD cards.
- Improved disk.cpp for stm32f4, for improved write performance. This
  allows to fully utilize the multiple sector write, increasing write
  performance when writing large data blocks at a time.
- Started work on integrating Fat32 in the new file abstraction layer.
  Upgraded FatFs from 0.06 to 0.10. Added classes Fat32Fs and Fat32File
- Added an assertion in IntrusiveRefCountedSharedFromThis to help find
  bugs.
- File abstraction layer: FilesystemBase now publicly derives from
  IntrusiveRefCountedSharedFromThis to allow dynamic_casts
- File abstraction layer: added FilesystemBase::getFsId()
- File abstraction layer: added rmdir()
- Implemented the nanosleep() syscall to support sleep() and usleep().
- Removed kernel/unistd.cpp as we're now relying in the implementation of
  sleep() and usleep() in newlib.
- Fixed newlib patch to add HAVE_NANOSLEEP, as it was omitted by mistake.
  This change requires recompiling GCC!
- File abstraction layer: added support for mkdir(), unlink() and rename()
  syscalls.
- File abstraction layer: added testsuite test for directory listing.
  Also removed two tests from the testsuite related to the old Filesystem
  and Directory classes.
- File abstraction layer: implemented fcntl() and getdents().
- File abstraction layer: improved path resolution with support for opening
  directories. Now the substring of the resolved path starting with off
  does not contain a leading /
- Added IntrusiveRefCountedEnableSharedFromThis.
- File abstraction layer: added FilesystemManager::umountAll()
- Fixed support for compiling kernel without WITH_FILESYSTEM and added
  WITH_DEVFS config option to fine-tune code size for a given application.