@@ -1,5 +1,7 @@
 Changelog for Miosix np embedded OS
 
+- Added a new benchmark to test the filesystem backend (sector read/write).
+  This is a separate benchmark and not in the testsuite.
 - Updated newlib patches so as to avoid stdio code fragmenting large
   data blocks passed to fwrite() into smaller chunks if the file is
   unbuffered. This allows to increment filesystem write performance,
